--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,20 @@
+astroid==2.2.5
 Click==7.0
 Flask==1.0.2
+Flask-Login==0.4.1
 Flask-SQLAlchemy==2.4.0
 Flask-WTF==0.14.2
-Flask-Login==0.4.1
 gunicorn==19.9.0
+isort==4.3.20
 itsdangerous==1.1.0
 Jinja2==2.10.1
-MarkupSafe==1.1.1
-SQLAlchemy==1.3.3
-Werkzeug==0.15.4
-isort==4.3.20
 lazy-object-proxy==1.4.1
+MarkupSafe==1.1.1
 mccabe==0.6.1
+psycopg2-binary==2.8.2
+pylint==2.3.1
 six==1.12.0
+SQLAlchemy==1.3.3
 typed-ast==1.3.5
 Werkzeug==0.15.4
 wrapt==1.11.1
